# duckdb_aws

./: .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: HighPriorityIssues.yml  Linux.yml  MacOS.yml  MainDistributionPipeline.yml  MinioTests.yml  Windows.yml
scripts/: create_minio_credential_file.sh
src/: aws_extension.cpp  aws_secret.cpp  quack_extension.cpp
src/include/: aws_extension.hpp  aws_secret.hpp
test/: README.md
test/nodejs/: aws_test.js
test/python/: aws_test.py
test/sql/: aws.test  aws_env_var.test  aws_errors.test  aws_minio.test  aws_minio_secret.test  aws_secret.test  aws_secret_chains.test  aws_secret_chains_minio.test  aws_secret_gcs.test  aws_secret_r2.test
test/sql/env/: README.md  aws_env_var.test  aws_secret_chains_env.test
